This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-05-27:

- [v1.1] Fixed another bug with superfluous operands in test/[ that slipped
  through the cracks on 2024-12-08: test -n -a "" incorrectly returned 0. In
  native mode, this is now an error (superflous operand to the unary -n
  operator) and in POSIX mode, it returns 1/false, as POSIX-1.2017 rules
  require this to be a test for the non-emptiness of both strings -n and "".

2025-05-26:

- Fixed a POSIX mode bug in test/[ (with 'posix' shell option on):
  * test ! foo -o bar	wrongly returned 0/true, now returns 1/false.
  * test ! foo -a ''	wrongly returned 1/false, now returns 0/true.
  This regression was introduced on 2021-11-13.

- Made the handling of deprecated parenthesis operators in test/[ slightly
  more permissive for increased compatibility with other shells and external
  test/[ commands.

2025-05-15:

- Fixed an issue that prevented Unicode code points in $'...' strings and
  printf(1) formatters from being converted to the current locale. For
  example, if the locale on Linux/BSD/macOS is el_GR.ISO8859-7, echo $'\u03B1'
  now outputs a Greek lower-case alpha encoded in ISO8859-7 ($'\xE1').

2025-05-10:

- Fixed a memory leak in history expansion.

- Fixed a crash in 'fc -p'/'hist -p' that occurred when an incorrect history
  expansion followed a correct one in the command operands.

2025-05-08:

- [v1.1] Fixed: case modification expansions (added on 2025-04-23) were not
  properly subject to field splitting and pathname expansion if unquoted.

2025-05-05:

- [v1.1] grep(1) has been added as a path-bound built-in command. It is now
  available by default on ksh linked against dynamic libcmd, and may
  optionally be included in ksh linked against static libcmd. This grep