@@ -4,6 +4,10 @@ Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
 2025-05-27:
 
+- Fixed a bug in printf where \u0025 was taken as a % operator in a
+  formatter argument. For example, printf '\u0025\n' now correctly prints a
+  % followed by a newline instead of producing an error.
+
 - [v1.1] Fixed another bug with superfluous operands in test/[ that slipped
   through the cracks on 2024-12-08: test -n -a "" incorrectly returned 0. In
   native mode, this is now an error (superflous operand to the unary -n
